# sparse_matrix

./: .gitignore  Cargo.toml  LICENSE  TODO.md  flake.nix  flamegraph.sh  q2.md  rust-toolchain.toml  shell.nix
.cargo/: config.toml
benches/: bench_mul_btree.rs  bench_mul_dense.rs  bench_mul_esc.rs  bench_mul_hash.rs  bench_mul_hash1.rs  bench_mul_heap.rs  mkl_spmm.rs  mul_hash.rs  mul_hash2.rs  my_bench.rs
cmplx/: Cargo.toml
cmplx/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: add.rs  arb_csr_invariants.rs  arb_dok_invariants.rs  convert.rs  iter.rs  mkl_roundtrip.rs  mkl_spmm.rs  mkl_spmm_unsorted.rs  mul.rs  mul_hash.rs  mul_hash2.rs  test_add_1.rs
intel-mkl-spblas-sys/: Cargo.toml  build.rs  wrapper.h
linprobe/: Cargo.toml
linprobe/src/: lib.rs  map.rs  set.rs
nix/: sources.json
proptest-regressions/: test.txt
sci/: Cargo.toml
sci/src/: lib.rs
spam/: Cargo.toml
spam/benches/: bench_mkl_spmm.rs  bench_mul_btree.rs  bench_mul_hash.rs
spam/fuzz/: Cargo.toml
spam/fuzz/fuzz_targets/: mkl_roundtrip.rs  set_element.rs
spam/src/: arbitrary.rs  csr_matrix.rs  dok_matrix.rs  lib.rs  main.rs  proptest.rs  tests.rs
spam/src/csr_matrix/: ffi.rs
spam_csr/: Cargo.toml
spam_csr/benches/: mkl_spmm.rs  mul_hash.rs
spam_csr/src/: lib.rs  mkl.rs  mul_hash.rs  tests.rs
spam_csr_flamegraph_bins/: Cargo.toml
spam_dok/: Cargo.toml
spam_dok/src/: lib.rs  tests.rs
spam_matrix/: Cargo.toml
spam_matrix/src/: arbitrary.rs  lib.rs  proptest.rs
src/: arbitrary.rs  csr_matrix.rs  csr_matrix2.rs  dok_matrix.rs  hash_map.rs  hash_map2.rs  hash_set.rs  lib.rs  main.rs  mkl.rs  proptest.rs  test.rs  tests.rs
src/csr_matrix/: invariants.rs  mkl.rs  tests.rs
src/dok_matrix/: tests.rs
