[package]
name = "spam"
version = "0.1.0"
authors = ["Kevin Tran <kevintran@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
itertools = "0.10.0"
rayon = "1.5.1"
nom = "6.1.2"
anyhow = "1.0.40"
arbitrary = "1.0.1"
walkdir = "2.3.2"
rustc-hash = "1.1.0"
num_cpus = "1.13.0"
rayon-core = "1.9.1"
hashbag = "0.1.3"

[dev-dependencies]
criterion = "0.3.4"
proptest = "1.0.0"

[[bench]]
name = "bench_mul_hash"
harness = false

[[bench]]
name = "bench_mul_heap"
harness = false

[[bench]]
name = "bench_mul_btree"
harness = false

[[bench]]
name = "bench_mul_dense"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
