[package]
name = "spam"
version = "0.1.0"
authors = ["Kevin Tran <kevintran@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["mkl"]
mkl = []

[dependencies]
num = "0.4.0"
itertools = "0.10.1"
rayon = "1.5.1"
nom = "6.2.1"
anyhow = "1.0.42"
arbitrary = "1.0.1"
walkdir = "2.3.2"
rustc-hash = "1.1.0"
num_cpus = "1.13.0"
coz = "0.1.3"
libc = "0.2.98"
thiserror = "1.0.26"
num_enum = "0.5.2"
mkl-sys = { git = "https://github.com/Andlon/mkl-sys", version = "0.1.0", features = ["inspector-executor", "openmp", "ilp64"] }
crossbeam = "0.8.1"
hashbrown = "0.11.2"
# voracious_radix_sort = { version = "1.1.0", features = ["voracious_multithread"] }
cap-std = "0.16.3"
cap-rand = "0.16.3"
open-ambient = "0.0.1"

[dev-dependencies]
criterion = "0.3.4"
proptest = "1.0.0"

[[bench]]
name = "mul_hash"
harness = false

[[bench]]
name = "mul_hash2"
harness = false

[[bench]]
name = "mkl_spmm"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.dev.package.bindgen]
opt-level = 2
