cargo-features = ["edition2021"]

[package]
name = "cmplx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mkl = ["mkl-sys"]

[dependencies]
derive_more = "0.99.16"
num = "0.4.0"
proptest = { version = "1.0.0", optional = true }
mkl-sys = { git = "https://github.com/Andlon/mkl-sys", version = "0.1.0", optional = true, features = ["inspector-executor", "openmp", "ilp64"] }
