[package]
name = "spam"
version = "0.1.0"
authors = ["Kevin Tran <kevintran@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
itertools = "0.10.1"
rayon = "1.5.1"
nom = "6.2.1"
anyhow = "1.0.41"
arbitrary = "1.0.1"
walkdir = "2.3.2"
rustc-hash = "1.1.0"
num_cpus = "1.13.0"
coz = "0.1.3"
libc = "0.2.97"
thiserror = "1.0.25"
num_enum = "0.5.1"
mkl-sys = { git = "https://github.com/Andlon/mkl-sys", version = "0.1.0", features = ["all", "openmp", "ilp64"] }
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.4"
proptest = "1.0.0"

[[bench]]
name = "bench_mul_hash"
harness = false

[[bench]]
name = "bench_mul_heap"
harness = false

[[bench]]
name = "bench_mul_btree"
harness = false

[[bench]]
name = "bench_mkl_spmm"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.dev.package.bindgen]
opt-level = 2
