[package]
name = "spam_csr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
mkl = ["mkl-sys", "num_enum", "cmplx", "cmplx/mkl", "thiserror"]
test = ["cap-rand"]
debug = ["linprobe/debug"]

[dependencies]
cmplx = { path = "../cmplx", optional = true }
spam_matrix = { path = "../spam_matrix" }
linprobe = { path = "../linprobe" }
spam_dok = { path = "../spam_dok" }
itertools = "0.10.1"
rayon = "1.5.1"
num_cpus = "1.13.0"
mkl-sys = { git = "https://github.com/Andlon/mkl-sys", version = "0.1.0", optional = true, features = ["all", "openmp", "ilp64"] }
num_enum = { version = "0.5.4", optional = true }
thiserror = { version = "1.0.26", optional = true }
cap-rand = { version = "0.17.0", optional = true }
num-traits = "0.2.14"

[dev-dependencies]
cap-rand = "0.17.0"
cap-std = "0.17.0"
proptest = "1.0.0"
spam_dok = { path = "../spam_dok", features = ["proptest-arbitrary"] }
cmplx = { path = "../cmplx", features = ["proptest"] }
anyhow = "1.0.43"
criterion = "0.3.5"
open-ambient = "0.0.1"
spam_csr = { path = ".", features = ["test"] }

[[bench]]
name = "mul_hash"
harness = false

[[bench]]
name = "mkl_spmm"
harness = false
required-features = ["mkl"]
