[package]
name = "spam_csr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test = ["cap-rand"]
debug = ["linprobe/debug"]

[dependencies]
spam_matrix = { path = "../spam_matrix" }
linprobe = { path = "../linprobe" }
spam_dok = { path = "../spam_dok" }
itertools = "0.10.1"
rayon = "1.5.1"
num_cpus = "1.13.0"
num_enum = { version = "0.5.4", optional = true }
thiserror = { version = "1.0.30", optional = true }
cap-rand = { version = "1.0.5", optional = true }
num-traits = "0.2.14"

[dev-dependencies]
cap-rand = "1.0.5"
cap-std = "1.0.5"
proptest = "1.0.0"
spam_dok = { path = "../spam_dok", features = ["proptest-arbitrary"] }
anyhow = "1.0.45"
criterion = "0.3.5"
open-ambient = "0.3.0"
spam_csr = { path = ".", features = ["test"] }

[[bench]]
name = "mul_hash"
harness = false

[[bench]]
name = "mkl_spmm"
harness = false
required-features = ["mkl"]
