[package]
name = "spam_dok"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proptest-arbitrary = ["proptest", "spam_matrix/proptest"]

[dependencies]
cmplx = { path = "../cmplx" }
spam_matrix = { path = "../spam_matrix" }
itertools = "0.10.1"
nom = "7.0.0"
num = "0.4.0"
thiserror = "1.0.26"
proptest = { version = "1.0.0", optional = true }

[dev-dependencies]
proptest = "1.0.0"
spam_matrix = { path = "../spam_matrix", features = ["proptest"] }
