[package]
name = "spam_matrix"
version = "0.1.0"
authors = ["Kevin Tran <kevintran@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
arbitrary = { version = "1.0.1", optional = true }
proptest = { version = "1.0.0", optional = true }
